--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,18 @@ main{
 legend{
     color: brown;
 }
+nav ul{
+    display: flex;
+}
+ li a{
+    text-decoration: none;
+}
+nav li{
+    list-style: none;
+    margin-right: 20px;
+    padding: 0 5px;
+}
+nav li:hover{
+    background-color: aqua;
+  
+}
